# ifr-opencv

./: .gitignore  .gitmodules  ARMOR.md  CMakeLists.txt  README.md
docs/arm/: README.md
lib/UltraMultiThread/: CMakeLists.txt  README.md
lib/UltraMultiThread/include/umt/: Message.hpp  ObjManager.hpp
lib/basic/: DxImageProc.h  GxIAPI.h  ext_funcs.h  ext_types.c  ext_types.h  galaxy_cam.c  galaxy_cam.h  serial_port.c  serial_port.h  simple_serial_port.c  simple_serial_port.h
lib/predict_needed/: data_process.cpp  fit_functions.cpp  predict_model.cpp
lib/predict_needed/headers/: data_process.hpp  fit_functions.hpp  predict_model.hpp
src/: API.cpp  API.h  AimEM.cpp  AimEM.h  Camera.cpp  Camera.h  Config.cpp  Config.h  DataWaiter.h  FinderEM.cpp  FinderEM.h  ImgDisplay.cpp  ImgDisplay.h  OutputEM.cpp  OutputEM.h  Plans.cpp  Plans.h  Record.cpp  Record.h  Signal.cpp  Signal.h  argparse.hpp  defs.h  main.cpp  semaphore.h
src/datas/: referee_datas.h
src/tasks/: AimArmor.cpp  AimArmor.h  AimEM.cpp  AimEM.h  Camera.cpp  Camera.h  FinderArmor.cpp  FinderArmor.h  FinderEM.cpp  FinderEM.h  OutputEM.cpp  OutputEM.h  OutputMotor.cpp  OutputMotor.h  Picture.h  RefereeData.h  Video.h
